#181738: Fix for layout selection form on Safari.

--- a/css/panels_admin.css
+++ b/css/panels_admin.css
@@ -11,7 +11,6 @@
 }
 
 /* general style for the layout-icon */
-
 .layout-icon .caption {
   width: 90px;
   margin-bottom: 1em;
@@ -65,11 +64,13 @@
 #panels-choose-layout .form-radios .form-item {
   float: left;
   margin-right: .5em;
+  width: 90px;
 }
 
 #panels-choose-layout .form-radios .form-item .layout-icon {
   float: none;
   height: 15em;
+  width: 90px;
 }
 
 #panels-choose-layout .form-radios .form-item .option {
